--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,52 @@
-# Compiled class file
+# Built application files
+*.apk
+*.ap_
+*.aab
+*.hprof
+*.lnk
+
+# Files for the ART/Dalvik VM
+*.dex
+
+# Java class files
 *.class
 
-# Log file
+# Generated files
+bin/
+gen/
+out/
+
+# Gradle files
+.gradle/
+build/
+
+# Local configuration file (sdk path, etc)
+local.properties
+
+# Log Files
 *.log
+stacktrace.txt
+
+# Android Studio Navigation editor temp files
+.navigation/
+
+# Android Studio captures folder
+captures/
+
+# Intellij
+*.iml
+.idea/*
+!.idea/codeInsightSettings.xml
 
 # BlueJ files
 *.ctxt
+# OSX
+.DS_STORE
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
+# Local gradle properties
+gradle-local.properties
 
 # Package Files #
 *.jar
@@ -18,7 +56,12 @@
 *.zip
 *.tar.gz
 *.rar
+# Dropbox Focus include files
+includes.gradle.kts
+includes-local.gradle.kts
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+.vscode/
+.local.properties
